--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ Flask-SocketIO==5.1.1
 python-socketio==5.4.0
 python-engineio==4.2.1
 eventlet==0.33.0
-python-dotenv==0.19.0 
+python-dotenv==0.19.0
+pandas==2.0.3
+openpyxl==3.1.2 
